--- a/StoreSearch/SearchResultCell.xib
+++ b/StoreSearch/SearchResultCell.xib
@@ -10,44 +10,48 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultCell" id="Ufs-SJ-kE2" customClass="SearchResultCell" customModule="StoreSearch" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultCell" rowHeight="80" translatesAutoresizingMaskIntoConstraints="NO" id="Ufs-SJ-kE2" customClass="SearchResultCell" customModule="StoreSearch" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
-            <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ufs-SJ-kE2" id="Jl6-27-1PN">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Sq2-Lo-dY1">
-                        <rect key="frame" x="16" y="11.5" width="60" height="57"/>
-                        <color key="tintColor" systemColor="systemGrayColor"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="60" id="5xi-o7-sbi"/>
-                            <constraint firstAttribute="height" constant="60" id="fXD-ra-0JD"/>
-                        </constraints>
-                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="thin"/>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ml3-QC-p5X">
-                        <rect key="frame" x="84" y="16" width="275" height="22"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="83O-nq-FaO">
-                        <rect key="frame" x="84" y="46" width="275" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" name="ArtistNameColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dgz-Tr-ejZ">
+                        <rect key="frame" x="0.0" y="10" width="375" height="60"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Sq2-Lo-dY1">
+                                <rect key="frame" x="0.0" y="1.5" width="60" height="57"/>
+                                <color key="tintColor" systemColor="systemGrayColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="5xi-o7-sbi"/>
+                                    <constraint firstAttribute="height" constant="60" id="fXD-ra-0JD"/>
+                                </constraints>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="thin"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="TpQ-t1-MXV">
+                                <rect key="frame" x="68" y="0.0" width="307" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ml3-QC-p5X">
+                                        <rect key="frame" x="0.0" y="0.0" width="307" height="37.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="83O-nq-FaO">
+                                        <rect key="frame" x="0.0" y="45.5" width="307" height="14.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                        <color key="textColor" name="ArtistNameColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Sq2-Lo-dY1" firstAttribute="leading" secondItem="Jl6-27-1PN" secondAttribute="leading" constant="16" id="4kR-id-pxC"/>
-                    <constraint firstAttribute="trailing" secondItem="ml3-QC-p5X" secondAttribute="trailing" constant="16" id="8Jg-WQ-v9v"/>
-                    <constraint firstAttribute="trailing" secondItem="83O-nq-FaO" secondAttribute="trailing" constant="16" id="D6d-L7-Z1x"/>
-                    <constraint firstItem="83O-nq-FaO" firstAttribute="top" secondItem="ml3-QC-p5X" secondAttribute="bottom" constant="8" id="IcF-es-c76"/>
-                    <constraint firstItem="ml3-QC-p5X" firstAttribute="leading" secondItem="Sq2-Lo-dY1" secondAttribute="trailing" constant="8" id="VMb-t6-Yo5"/>
-                    <constraint firstItem="ml3-QC-p5X" firstAttribute="top" secondItem="Jl6-27-1PN" secondAttribute="top" constant="16" id="iYL-Sj-X9T"/>
-                    <constraint firstItem="Sq2-Lo-dY1" firstAttribute="top" secondItem="Jl6-27-1PN" secondAttribute="top" constant="10" id="mDk-rz-vvD"/>
-                    <constraint firstItem="83O-nq-FaO" firstAttribute="leading" secondItem="Sq2-Lo-dY1" secondAttribute="trailing" constant="8" id="q4u-lN-lJr"/>
+                    <constraint firstItem="Dgz-Tr-ejZ" firstAttribute="centerY" secondItem="Jl6-27-1PN" secondAttribute="centerY" id="SbH-uZ-xBh"/>
+                    <constraint firstItem="Dgz-Tr-ejZ" firstAttribute="leading" secondItem="Jl6-27-1PN" secondAttribute="leadingMargin" constant="-16" id="py1-QG-1RQ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Dgz-Tr-ejZ" secondAttribute="trailing" constant="-16" id="qn9-DZ-RfD"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -55,7 +59,7 @@
                 <outlet property="artworkImageView" destination="Sq2-Lo-dY1" id="357-9A-Vta"/>
                 <outlet property="nameLable" destination="ml3-QC-p5X" id="q8d-PR-CC9"/>
             </connections>
-            <point key="canvasLocation" x="170.40000000000001" y="-58.47076461769116"/>
+            <point key="canvasLocation" x="168.80000000000001" y="-50.824587706146929"/>
         </tableViewCell>
     </objects>
     <resources>
